--- a/HTML/PEW.html
+++ b/HTML/PEW.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programação Básica para Web</title>
-    <p><a href="HTML/index.html">Voltar a página inicial</a></p>
+    <p><a href="../index.html">Voltar a página inicial</a></p>
 </head>
 <body>
     <h1>Programação Básica para Web</h1>
